core/src/ast/snapshots/span_testing/diplomat_core__ast__logging__tests__flush@owned_slice.rs_ugly.snap
---
source: core/src/ast/logging.rs
expression: self.buf
---
Diplomat error: Owned slices only support primitives
In src/ast/snapshots/span_testing/owned_slice.rs:3:30:
...Box<[Type]>) {...
        ^^^^
